fixed images on mobile

--- a/ASSETS/SASS/_images.scss
+++ b/ASSETS/SASS/_images.scss
@@ -28,6 +28,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 80px;
+    &:hover {
+      height: 90px;
+      width: 80px;
+    }
   }
 }
 
@@ -40,6 +44,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 130px;
+    &:hover {
+      height: 140px;
+      width: 80px;
+    }
   }
 }
 
@@ -51,6 +59,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 70px;
+    &:hover {
+      height: 80px;
+      width: 80px;
+    }
   }
 }
 
@@ -61,6 +73,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 140px;
+    &:hover {
+      height: 150px;
+      width: 80px;
+    }
   }
 }
 
@@ -71,6 +87,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 180px;
+    &:hover {
+      height: 190px;
+      width: 80px;
+    }
   }
 }
 
@@ -81,6 +101,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 90px;
+    &:hover {
+      height: 100px;
+      width: 80px;
+    }
   }
 }
 
@@ -91,6 +115,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 120px;
+    &:hover {
+      height: 130px;
+      width: 80px;
+    }
   }
 }
 
@@ -101,6 +129,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 70px;
+    &:hover {
+      height: 80px;
+      width: 80px;
+    }
   }
 }
 
@@ -111,6 +143,10 @@ img {
   }
   @media (max-width: 750px) {
     height: 150px;
+    &:hover {
+      height: 160px;
+      width: 80px;
+    }
   }
 }
 
